fix white color not showing on other browsers

--- a/src/components/CreateButton/CreateButton.scss
+++ b/src/components/CreateButton/CreateButton.scss
@@ -2,6 +2,7 @@
 
 #create-button {
     background-color: $green-color;
+    color: #fff;
     height: 40px;
     min-width: 178px;
     width: max-content;
